--- a/style.css
+++ b/style.css
@@ -9,3 +9,189 @@ html{
     font-family: "Montserrat", sans-serif;
     scroll-behavior: smooth;
 }
+body{
+    min-height: 100vh;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+nav{
+    background-color: rgba(31, 30, 30, 0.248);
+    backdrop-filter: blur(10px);
+    box-shadow: -10px 0px 10px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 100%;
+    text-transform: uppercase;
+    z-index: 1000;
+   
+}
+nav ul{
+    width: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+nav li{
+    height: 50px;
+}
+nav a{
+    height: 100%;
+    padding: 0 30px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: white;
+}
+nav a:hover{
+    /* background-color: lightgrey; */
+    color: crimson;
+}
+nav ul li{
+    font-size: 1.6rem;
+    
+}
+nav li:first-child{
+    margin-right: auto;
+}
+nav li h3{
+    font-size: 3rem;
+    padding-top: 3px;
+    padding-left: 20px;
+    font-weight:normal;
+    font-family: "Montserrat", sans-serif;color: #fff;
+}
+nav li h3 span{
+    color: crimson;
+    font-size: 2.7rem;
+}
+
+.sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index: 1000;
+    background-color: rgba(31, 30, 30, 0.865);
+    color: #fff;
+    box-shadow: -10px 0px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: flex-start;
+    backdrop-filter: blur(10px);
+}
+.menu-close-button{
+    background-color: #fff;
+}
+.sidebar li {
+    width: 100%;
+    
+}
+.sidebar a{
+    width: 100%;
+}
+.menu-button{
+    display: none;
+}
+
+.container{
+    height: 90vh;
+    width: 100%;
+    border: 2px solid black;
+    padding-top :100px ;
+    padding-left: 30px;
+}
+.container h1{
+    font-size: 40px;
+    font-weight:normal;
+    font-family:"Montserrat", sans-serif;
+    color: #fff;
+}
+.container h3{
+    font-size: 3em;
+    font-family:"Montserrat", sans-serif;
+    color: crimson;
+    font-weight:normal;
+}
+.container button{
+    border: 2px solid crimson;
+    border-radius: 2px;
+    backdrop-filter: blur(10px);
+    background-color: transparent;
+    width: 160px;
+    color: #fff;
+    height: 40px;
+    transition:background-color 0.5s ease ;
+}
+.container button:hover{
+    background-color: crimson;
+
+}
+header{
+    background-image: linear-gradient(to bottom, rgba(39, 34, 34, 0.395), rgba(41, 38, 38, 0.395)),
+        url('./background-img.webp');
+        height: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+}
+#services{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 0 10px 20px 10px;
+}
+#services h2{
+    font-size: 6em;
+    font-weight:lighter;
+    padding:30px 0 10px 30px ;
+}
+#services span{
+    
+    color: crimson;
+}
+.service-card h3{
+    font-size: 3em;
+    font-weight:normal;
+    text-align: center;
+    /* padding:0px 0 10px 30px ; */
+}
+.service-card p{
+    font-size: 2em;
+    font-weight:normal;
+    /* text-align: center; */
+    padding-left: 100px;
+}
+@media(max-width:800px) {
+    .hideOnMobile{
+        display: none;
+    }
+   
+    .menu-button{
+        display: block;
+        padding: 2px;
+    
+    }
+    
+   .blinking{
+    border:1px solid white;
+    animation: humberger 1s ease infinite;
+   
+   }
+    @keyframes humberger {
+        0%{
+        opacity:1;
+        transform: scale(1);
+        }
+        100%{
+        opacity:0;
+        transform: scale(1);
+        }
+    }
+}
+@media(max-width:800px) {
+    .sidebar{
+        width: 100%;
+    }
+}
