--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ header{
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        width: 100%;
 }
 #services{
     display: flex;
@@ -162,6 +163,36 @@ header{
     font-weight:normal;
    
     padding-left: 100px;
+}
+#services-img{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+  margin-top: 30px;
+}
+.img{
+    height: 40vh;
+    width: 20vw;
+    background-color: rgba(31, 30, 30, 0.527);
+    border-radius: 7px;
+}
+.img img{
+    mix-blend-mode: multiply;
+    margin-top: 40px;
+    margin-left: 30px;
+    
+}
+.img p{
+    padding: 8px;
+    margin-left: 7px;font-weight: lighter;color:#fff;
+}
+.img h2{
+    padding: 8px;
+    margin-top: 4px;
+    margin-left: 7px;
+    color:#fff;
+    font-size: large;
 }
 @media(max-width:800px) {
     .hideOnMobile{
