--- a/style.css
+++ b/style.css
@@ -174,8 +174,8 @@ header{
 .img{
     margin-top: 20px;
     height: 280px;
-    width: 220px;
-    background-color: rgba(31, 30, 30, 0.527);
+    width: 250px;
+    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
     border-radius: 7px;
 }
 .img img{
@@ -194,6 +194,65 @@ header{
     margin-left: 7px;
     color:#fff;
     font-size: large;
+}
+#projects h2{
+    font-size: 6em;
+    font-weight:lighter;
+    padding:30px 0 10px 30px ;
+    text-align: center;
+    font-family:"Montserrat", sans-serif;
+}
+#projects h2 span{
+    
+    color: crimson;
+}
+.box{
+    display: flex;
+    padding: 0 10px;
+    flex-wrap: wrap;
+}
+.items{
+    height: 360px;
+    width: 505px;
+    margin-left: 110px;
+    box-shadow: -10px 0 15px grey;
+    padding: 20px;
+    background-color: yellow;
+}
+.items span{
+    font-size: x-large;
+}
+.items p{
+    font-size: large;
+}
+.box img{
+    height: 360px;
+    width: 505px;
+    /* margin: 0 70px; */
+}
+.box1{
+    display: flex;
+    /* padding: 0 10px; */
+    flex-wrap: wrap;
+}
+.items1{
+    height: 360px;
+    width: 505px;
+    /* margin-left: 10px; */
+    padding: 20px;
+    background-color: yellow;
+}
+.items1 span{
+    font-size: x-large;
+}
+.items1 p{
+    font-size: large;
+}
+.box1 img{
+    height: 360px;
+    width: 505px;
+    margin: 0 0px 0 120px;
+    box-shadow: -10px 0 15px grey;
 }
 @media(max-width:800px) {
     .hideOnMobile{
