--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ header {
     align-items: center;
     flex-direction: column;
     padding: 0 10px 20px 10px;
+    margin-top: 100px;
 }
 
 #services h2 {
@@ -229,7 +230,9 @@ header {
     color: #fff;
     font-size: large;
 }
-
+#projects{
+    margin-top: 100px;
+}
 #projects h2 {
     font-size: 6em;
     font-weight: lighter;
@@ -327,6 +330,7 @@ header {
     justify-content: center;
     margin-top: 100px;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .img1{
@@ -342,6 +346,7 @@ header {
     left: 30px;
 }
 .contant{
+    margin-top: 20px;
     margin-left: 60px;
     width: 500px;
 }
@@ -366,17 +371,30 @@ header {
 .contant button:hover{
     background-color: crimson;color: #fff;
 }
+#contactInfo{
+    margin-top: 100px;
+}
+#contactInfo span{
+    color: crimson;
+
+}
+#contactInfo h2{
+    font-size: 6em;
+    font-weight: lighter;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+}
 @media(max-width:1020px) {
     .items {
         height: 380px;
-        margin-left: 0px;
+        margin-left: 30px;
         margin-top: 20px;
         width: 405px;
     }
 
     .items1 {
         height: 450px;
-        margin-left: 0px;
+        margin-left: 30px;
         margin-top: 0px;
         width: 405px;
     }
@@ -385,6 +403,7 @@ header {
         height: 360px;
         width: 505px;
         margin: 0;
+        margin-left: 30px;
         margin-top: 20px;
         width: 405px;
     }
@@ -396,6 +415,7 @@ header {
 
     .box img {
         width: 405px;
+        margin-left: 30px;
 
     }
 }
