--- a/style.css
+++ b/style.css
@@ -384,6 +384,31 @@ header {
     text-align: center;
     font-family: "Montserrat", sans-serif;
 }
+.container1{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.boxes{
+    background-color: rgb(254, 254, 242);
+    box-shadow: 0px 0px 8px gray;
+    border-radius: 10px;
+    width: 320px;
+    height: 160px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 20px;
+}
+.boxes h1{
+font-size: 3em;
+font-weight: lighter;
+}
+.boxes p{
+font-size: 1.3em;
+font-weight: lighter;
+}
 @media(max-width:1020px) {
     .items {
         height: 380px;
