--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ nav a {
 }
 
 nav a:hover {
-    /* background-color: lightgrey; */
+  
     color: crimson;
 }
 
@@ -74,7 +74,6 @@ nav li h3 {
 
 nav li h3 span {
     color: crimson;
-    font-size: 2.7rem;
 }
 
 .sidebar {
@@ -318,12 +317,12 @@ header {
 #projects a {
     color: #fff;
     text-decoration: none;
+   
 }
 
 #projects a:hover {
     color: crimson;
-
-    text-decoration: underline;
+    background-color: white;
 }
 #aboutMe{
     display: flex;
@@ -407,6 +406,30 @@ font-weight: lighter;
 }
 .boxes p{
 font-size: 1.3em;
+font-weight: lighter;
+}
+footer{
+    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+    color: #fff;
+    text-align: center;
+    mix-blend-mode: multiply;
+    padding: 10px;
+    margin-top: 50px;
+}
+footer h3 {
+        font-size: 3rem;
+        padding-top: 3px;
+        padding-left: 20px;
+        font-weight: normal;
+        font-family: "Montserrat", sans-serif;
+        color: #fff;
+    }
+
+footer span {
+    color: crimson;
+}
+footer p{
+    font-size: 1.3em;
 font-weight: lighter;
 }
 @media(max-width:1020px) {
